tests/baselines/reference/moduleWithNoValuesAsType.errors.txt
moduleWithNoValuesAsType.ts(2,8): error TS2709: Cannot use namespace 'A' as a type.
moduleWithNoValuesAsType.ts(7,8): error TS2709: Cannot use namespace 'B' as a type.
moduleWithNoValuesAsType.ts(15,8): error TS2709: Cannot use namespace 'C' as a type.


==== moduleWithNoValuesAsType.ts (3 errors) ====
    module A { }
    var a: A; // error
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    
    module B {
        interface I {}
    }
    var b: B; // error
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    module C {
        module M {
            interface I {}
        }
    }
    
    var c: C; // error
           ~
!!! error TS2709: Cannot use namespace 'C' as a type.